# segment-intersection

./: .gitignore  .prettierrc  LICENSE  README.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: deploy.yml  publish.yml  verify.yml
assets/: index.4b17ed08.css  index.5339e5f5.css  index.92725eb1.js  index.e9c43ddf.js  index.ef395d25.js  vendor.89ed1c77.js
playground/: index.html  main.ts  style.css  vite.config.ts
src/: index.ts  naive.ts
tests/: bench.js  bench.ts  unit.test.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
